spl2/hn_tests/failing/multiloc.cpp
#include <hn/lib.hpp>

ff::IO<void> hnMain()
{
	int a = b + 1;
	return ff::print(a);
};
